# my-tools

./: .gitignore  CLAUDE.md  README-en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: index.json  settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.html  icon.icns
src-tauri/src/: main.rs
src/components/: CLAUDE.md  Home.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/tools/: CLAUDE.md  CronTools.tsx  CryptoTools.tsx  IdCardTool.tsx  JsonFormatter.tsx  JwtTool.tsx  QRCodeTool.tsx  RegexTool.tsx  TimeTool.tsx
src/components/ui/: Button.tsx  DropdownMenu.tsx  Input.tsx  JsonHighlight.test.tsx  JsonHighlight.tsx  JsonTree.test.tsx  JsonTree.tsx  RegionSelector.tsx  Select.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx
src/lib/: CLAUDE.md  gm.example.ts  utils.test.ts
src/lib/cron/: explainer.test.ts  explainer.ts  generator.test.ts  generator.ts  index.ts  parser.test.ts  parser.ts  scheduler.test.ts  scheduler.ts  types.test.ts  types.ts  validator.test.ts  validator.ts
src/lib/crypto/: CLAUDE.md  crypto.test.ts  index.ts  types.ts
src/lib/gm/: CLAUDE.md  README.md  index.ts  sm2.test.ts  sm2.ts  sm3.test.ts  sm3.ts  sm4.test.ts  sm4.ts
src/lib/idCard/: index.ts  regionData.ts.backup  types.ts
src/lib/json/: CLAUDE.md  fixJson.ts  index.ts  json.test.ts  types.ts
src/lib/jwt/: index.ts  jwt.test.ts  types.ts
src/lib/qrcode/: index.ts  types.ts
src/test/: setup.ts
src/types/: sm-crypto.d.ts
(+7 files in other folders)
