[package]
name = "my-tools"
version = "0.1.0"
description = "开发者工具集合"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "my_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
